2009-10-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Fixed 'Bug 547470 - Override completion for "protected
	  internal" is wrong'.

2009-10-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightCSharpSemanticRule.cs:
	  Fixed 'Bug 546143 - Semantic Type Highlighting does not work
	  on attributes.'.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: worked on
	  constructor initalizer resolving.

2009-10-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj: Fix build.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	  Disabled conditionditional highlighting for debugger files.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
	  540054 - 'Go to Declaration' goes wrong when methods are
	  overloaded'.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Special
	  handling of field names & typenames (same as for
	  properties).

2009-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightCSharpSemanticRule.cs:
	  Fixed 'Bug 546392 - exception in highlighting'.

2009-10-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 546016 - EventHandler code completion not working
	  if there is no space after +='.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* md1format.xml: track namespace changes.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Fixed 'Bug 545667 - Exception when autoformatting'.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs: