@@ -96,6 +96,7 @@ namespace MonoDevelop.CSharp.Resolver
 		public ExpressionContext FindExactContextForObjectInitializer (MonoDevelop.Ide.Gui.TextEditor editor, ICompilationUnit unit, string fileName, IType callingType)
 		{
 			string documentToCursor = editor.GetText (0, editor.CursorPosition);
+			
 //			int pos = -1;
 			
 			// create a table with all opening brackets
@@ -135,9 +136,10 @@ namespace MonoDevelop.CSharp.Resolver
 				}
 			}
 			bool foundCurlyBrace = false;
-			for (int i = documentToCursor.Length - 5; i >= 0; i--) {
-				if (documentToCursor[i] == '{')
+			for (int i = documentToCursor.Length - 1; i >= 0; i--) {
+				if (documentToCursor[i] == '{') {
 					foundCurlyBrace = true;
+				}
 				if (documentToCursor[i] == ')' || documentToCursor[i] == '}' || documentToCursor[i] == ']') {
 					int newPos;
 					if (brackets.TryGetValue (i, out newPos)) {
@@ -146,7 +148,7 @@ namespace MonoDevelop.CSharp.Resolver
 						// otherwise the "new Name" would be falsly taken as object initializer
 						if (!foundCurlyBrace) {
 							while (i >= 0) {
-								if (documentToCursor[i] == '=')
+								if (documentToCursor[i] == '=' || documentToCursor[i] == ';')
 									break;
 								i--;
 							}
@@ -154,7 +156,7 @@ namespace MonoDevelop.CSharp.Resolver
 						continue;
 					}
 				}
-				if (documentToCursor.Substring (i, 4) == "new ") {
+				if (i + 4 < documentToCursor.Length && documentToCursor.Substring (i, 4) == "new ") {
 					bool skip = false;
 					for (int j2 = i; j2 < documentToCursor.Length; j2++) {
 						if (documentToCursor[j2] == '{')
@@ -172,11 +174,10 @@ namespace MonoDevelop.CSharp.Resolver
 					while (j < documentToCursor.Length && Char.IsWhiteSpace (documentToCursor[j]))
 						j++;
 //					int start = j;
-					while (j < documentToCursor.Length && (Char.IsLetterOrDigit (documentToCursor[j]) || documentToCursor[j] == '_'))
+					while (j < documentToCursor.Length && (Char.IsLetterOrDigit (documentToCursor[j]) || documentToCursor[j] == '_' || documentToCursor[j] == '.'))
 						j++;
 					
 					ExpressionResult firstExprs = FindExpression (documentToCursor, j);
-					
 					if (firstExprs.Expression != null) {
 						IReturnType unresolvedReturnType = NRefactoryResolver.ParseReturnType (firstExprs);
 						if (unresolvedReturnType != null) {
