@@ -1,5 +1,11 @@
 2009-10-19  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
+	  Fixed 'Bug 547645 - Intellisense in Object-Initializer does
+	  not work if Namespace is used'.
+
+2009-10-19  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
 	  Fixed 'Bug 547470 - Override completion for "protected
 	  internal" is wrong'.
